--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
                 <div class="exchange-rates__tabs">
                     <div class="calculate-credit__heading">
                         <h2>{% trans 'Курсы' %}</h2>
-                        <p>Курс актуален {{ date }} г.</p>
+                        <p>{% trans 'Курс актуален' %}{{ date }} г.</p>
                     </div>
                     <div class="exchange-rates__but-all">
                         <div class="exchange-rates__but tabs-button-js">{% trans 'Курсы НБКР' %}</div>
