--- a/templates/financing/financing_detail.html
+++ b/templates/financing/financing_detail.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-    <section class="credit-detail__banner" style="background: linear-gradient(90deg, rgb(2, 0, 36) 0%, rgb(9, 9, 121) 0%, rgb(7, 50, 148) 0%, rgb(1, 48, 89) 0%, rgb(1, 48, 89) 0%, rgb(87, 182, 219) 100%);">
+    <section class="credit-detail__banner" style="background: linear-gradient(90deg, rgb(1,89,16) 0%, rgb(1,89,16) 0%, rgb(7,148,115) 0%, rgba(7,148,99,0.93) 0%, rgb(1, 89, 12) 0%, rgb(127, 219, 87) 100%);">
     <div class="container">
       <div class="credit-detail__banner-img">
           <img src="{{financing_detail.image.url}}" alt="load img"/>
