--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6464,7 +6464,7 @@ main {
 
 .credit-detail__banner {
     position: relative;
-    background: linear-gradient(83.82deg, #14212F 0%, #2B4561 100%);
+    background: linear-gradient(83.82deg, #097936 0%, #07946a 100%);
     border-radius: 4px;
     margin: 0 0 60px 0
 }
